--- a/src/app/single-face-snap/single-face-snap.component.html
+++ b/src/app/single-face-snap/single-face-snap.component.html
@@ -1,4 +1,4 @@
-<div class="face-snap-card">
+<div class="face-snap-card" *ngIf="faceSnap$ | async as faceSnap" [ngClass]="{ snapped: buttonText === 'Oops, unSnap!' }">
     <h2>{{faceSnap.title | uppercase }}</h2>
     <p>Mis en ligne le {{ faceSnap.createdDate | date : ' dd/MM/yy'}}</p>
     <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
@@ -8,7 +8,7 @@
     <p *ngIf="faceSnap.location"> photo prise a {{ faceSnap.location }} </p>
     <p>
 
-      <button (click)="onSnap()">{{ buttonText }}</button>
+      <button (click)="onSnap(faceSnap.id)">{{ buttonText }}</button>
       <span [ngStyle]="{ color: 'rgb(0, ' + faceSnap.snaps + ', 0)' }">🤌 {{ faceSnap.snaps }}</span>
       
     </p>
